exports[`<NewTabLink /> renders matches previous snapshot 1`] = `
<a
  className="new-tab-link undefined"
  href="http://example.com"
  onClick={undefined}
  rel="noopener noreferrer"
  target="_blank" />
`;

exports[`<NewTabLink /> renders renders children inside link 1`] = `
<a
  className="new-tab-link undefined"
  href="http://example.com"
  onClick={undefined}
  rel="noopener noreferrer"
  target="_blank">
  <div />
</a>
`;
